--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="rotate-notice">
-      <img src="img/rotate.webp" alt="" />
+      <img src="img/rotate.gif" alt="" />
     </div>
 
     <div id="start-screen">
