--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,11 @@
       <!-- Basket -->
       <div class="basket-cover" id="basket-cover"></div>
       <div class="basket" id="basket"></div>
+
+      <div class="mobile-controls hidden">
+        <button id="left-btn" class="arrow-btn left">◀</button>
+        <button id="right-btn" class="arrow-btn right">▶</button>
+      </div>
     </div>
 
     <!-- Scoreboard -->
