--- a/client/index.html
+++ b/client/index.html
@@ -91,6 +91,14 @@
           <li>💣 Black egg = -10 points</li>
           <li>💔 Missing a non-black egg costs a life.</li>
           <li>☠️ Game over if lives = 0 or score goes below 0.</li>
+          <li>
+            ⌨️ On desktop: Use your keyboard's ⬅️➡️ arrow keys to move the
+            basket.
+          </li>
+          <li>
+            📱 On mobile: Use the on-screen ⬅️➡️ buttons or drag the basket with
+            your finger 👉.
+          </li>
         </ul>
         <button id="close-rules-btn" style="font-style: 'Handlee', cursive">
           Close
