--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Egg Catcher Game</title>
+    <title>Egg Hunt</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
